# b3-bmf-derivatives

./: .env.example  .gitignore  nixpacks.toml  railway.json  requirements.txt  run-dev.bat  run.bat  vercel.json
backend/: pyproject.toml
backend/src/: app.py  b3_client.py  broadcaster.py
backend/src/providers/: __init__.py  b3_public.py  base.py
frontend/: package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: DIcurveChart.jsx  Header.jsx  PriceChart.jsx  QuotesTable.jsx  WatchlistConfig.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/styles/: bloomberg.css
frontend/src/utils/: format.js
