[project]
name = "b3-bmf-derivatives"
version = "0.1.0"
description = "Real-time B3/BMF derivatives price monitor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]
